# Astros_Game_Engine

./: CMakeLists.txt  README.md
include/core/ECS/: Component.hpp  Entity.hpp
include/core/ECS/Systems/: ModelSystem.hpp
include/graphics/: Renderer.hpp  Shader.hpp
include/graphics/OpenGL/: OpenGLRenderer.hpp
lib/: glm.lib
src/: main.cpp
src/core/ECS/Systems/: ModelSystem.cpp
src/graphics/: Renderer.cpp  Shader.cpp
src/graphics/OpenGL/: OpenGLRenderer.cpp
src/graphics/Shader/: Shader.cpp
